Limpieza de comentarios final Realizado por Tony Balan y Gabriel Toyom